--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,11 @@
+.weather-app {
+  max-width: 600px;
+}
+
 .block {
   border: 4px solid #7acdf3;
   background: #d9edfd;
-  width: 800px;
+  width: 600px;
 }
 
 .row-header {
@@ -25,7 +29,7 @@
 .city {
   background: #f0f8ff;
   font-size: 15px;
-  width: 450px;
+  width: 300px;
   top: 0;
   position: relative;
   right: 0;
@@ -37,10 +41,10 @@
   background: #353cf7;
   border: none;
   border-radius: 5px;
-  padding: 10px;
+  padding: 8px;
   position: relative;
-  right: -25px;
-  width: 120px;
+  right: -15px;
+  width: 100px;
 }
 
 .current-location {
@@ -48,15 +52,14 @@
   background: #1cc24b;
   border: none;
   border-radius: 5px;
-  padding: 10px;
+  padding: 8px;
   position: relative;
-  right: -50px;
-  width: 120px;
+  right: -30px;
+  width: 100px;
 }
 
 p {
   color: #556f8f;
-  font-size: 20px;
   padding: 0;
   margin: 0;
 }
@@ -76,226 +79,12 @@ h1 {
   top: -50px;
   font-weight: bold;
 }
-.sunny {
-  color: yellow;
-  font-size: 150px;
-  display: inline;
-  right: -300px;
-  position: relative;
-  margin: 0;
-  padding: 0;
-}
 
-.today-weather {
-  display: inline;
-  right: 0;
-  position: relative;
-}
-
-.cloudy {
-  color: whitesmoke;
-  font-size: 80px;
-  right: 50px;
-}
-
-.forecast .forecast2 .forecast6 {
-  font-weight: bold;
-  color: blue;
-}
-
-.thunder {
-  color: #b6c2cd;
-  font-size: 80px;
-  position: relative;
-  right: -50px;
-}
-
-.rain {
-  color: #1e9ff7;
-  font-size: 80px;
-  position: relative;
-  right: -100px;
-}
-
-.sun {
-  color: yellow;
-  font-size: 80px;
-  position: relative;
-  right: -150px;
-}
-.clouds {
-  color: whitesmoke;
-  font-size: 80px;
-  position: relative;
-  right: -200px;
-}
-
-.forecast {
-  right: -30px;
-  position: relative;
-  color: blue;
-  font-weight: bold;
-}
-.forecast2 {
-  right: -90px;
-  position: relative;
-}
-.forecast3 {
-  right: -200px;
-  position: relative;
-}
-
-.forecast4 {
-  right: -290px;
-  position: relative;
-}
-
-.forecast5 {
-  right: -380px;
-  position: relative;
-}
-
-.time {
-  right: -20px;
-  position: relative;
-}
-.time2 {
-  right: -90px;
-  position: relative;
-}
-.time3 {
-  right: -170px;
-  position: relative;
-}
-.time4 {
-  right: -260px;
-  position: relative;
-}
-.time5 {
-  right: -350px;
-  position: relative;
-}
 .developer {
   font-size: medium;
   display: inline;
-  position: relative;
-  right: -350px;
 }
 
-a {
-  position: relative;
-  right: -350px;
-}
-.chance {
-  text-align: center;
-}
-
-.sunday {
-  font-size: 100px;
-  color: #5a6275;
-  padding: 0;
-  font-size: 70px;
-  margin: 0;
-}
-.today-weather2 {
-  display: inline;
-  right: -250px;
-  position: relative;
-}
-
-.sunny2 {
-  color: yellow;
-  font-size: 150px;
-  display: inline;
-  right: -450px;
-  position: relative;
-  margin: 0;
-  padding: 0;
-}
-.city3 {
-  margin: 30px auto;
-  background: #f0f8ff;
-  font-size: 15px;
-  width: 100%;
-  line-height: 48px;
-}
-.label {
-  color: #f0f8ff;
-}
-
-.forecast6 {
-  right: -500px;
-  position: relative;
-  font-weight: bold;
-  color: blue;
-}
-
-.forecast7 {
-  right: -375px;
-  position: relative;
-  font-weight: bold;
-  color: blue;
-}
-.forecast8 {
-  right: -375px;
-  position: relative;
-  font-weight: bold;
-  color: blue;
-}
-.forecast9 {
-  right: -375px;
-  position: relative;
-  font-weight: bold;
-  color: blue;
-}
-.forecast10 {
-  right: -345px;
-  position: relative;
-  font-weight: bold;
-  color: blue;
-}
-.thunder1 {
-  font-size: 50px;
-  color: #b6c2cd;
-  position: relative;
-  right: -500px;
-}
-.thunder2 {
-  font-size: 50px;
-  color: #b6c2cd;
-  position: relative;
-  right: -380px;
-}
-.thunder3 {
-  font-size: 50px;
-  color: #b6c2cd;
-  position: relative;
-  right: -350px;
-}
-.temp {
-  position: relative;
-  right: -500px;
-}
-
-.next {
-  position: relative;
-  right: -430px;
-  font-size: 20px;
-}
-
-.temp1 {
-  position: relative;
-  right: -380px;
-}
-.next2 {
-  position: relative;
-  right: -440px;
-  font-size: 20px;
-}
-.temp2 {
-  position: relative;
-  right: -350px;
-}
 ul {
   list-style: none;
 }
