--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,43 @@
-.weather-app {
-  max-width: 600px;
+p {
+  color: #556f8f;
+  padding: 0;
+  margin: 0;
 }
 
+h1 {
+  font-size: 150px;
+  color: #5a6275;
+  padding: 0;
+  font-size: 70px;
+  margin: 0;
+  display: inline;
+  margin-bottom: 0;
+}
+
+ul {
+  list-style: none;
+  color: #556f8f;
+}
+
+h3 {
+  color: #556f8f;
+}
 .block {
-  border: 4px solid #7acdf3;
+  margin: 30px auto;
+  border: 2px solid #7acdf3;
   background: #d9edfd;
-  width: 600px;
+  max-width: 600px;
+  padding: 0 0 30px 30px;
 }
 
 .row-header {
+  margin: 0 auto;
   background: #5fa8e1;
   color: white;
   text-align: center;
+  width: 600px;
+  position: relative;
+  right: 32px;
 }
 
 .today {
@@ -58,21 +84,6 @@
   width: 100px;
 }
 
-p {
-  color: #556f8f;
-  padding: 0;
-  margin: 0;
-}
-
-h1 {
-  font-size: 150px;
-  color: #5a6275;
-  padding: 0;
-  font-size: 70px;
-  margin: 0;
-  display: inline;
-}
-
 .unit {
   display: inline;
   position: relative;
@@ -83,8 +94,4 @@ h1 {
 .developer {
   font-size: medium;
   display: inline;
-}
-
-ul {
-  list-style: none;
 }
